# django-cheroot

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
django_cheroot/: apps.py
django_cheroot/management/commands/: cheroot.py
docs/: configuration.md  index.md  installation.md  usage.md
docs/examples/: basic.md  custom-threads.md  production.md
tests/: test_command.py
