[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cheroot"
version = "1.1.0"
description = "Run a Django WSGI application on Cheroot, the high-performance pure-Python HTTP server from CherryPy."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Yashas H R", email = "rameshmamathayashas@gmail.com" }]
keywords = ["django", "cheroot", "wsgi", "server", "cherrypy"]
dependencies = [
    "django>=4.2",
    "cheroot>=10",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/modbender/django-cheroot"
Documentation = "https://modbender.in/django-cheroot/"
Repository = "https://github.com/modbender/django-cheroot"
Issues = "https://github.com/modbender/django-cheroot/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["django_cheroot*"]
